# learning_c

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  xmake.lua
chapter1_intro/: CMakeLists.txt
chapter1_intro/doc/: chapter1.md
chapter1_intro/docs/: chapter1.md
chapter1_intro/src/: main.c
chapter1_intro/test/: test1.c  test1.h  test1.txt
expression/include/: exercise.h  expression.h
expression/src/: exercise.c  expression.c  main.c  test.c
function/include/: exercise.h  function.h
function/src/: exercise.c  function.c  main.c
io_and_char/include/: io_and_char.h  test.h
io_and_char/src/: exercise.c  hello_world.c  main.c  test.c  variable_assignment.c
pointer/include/: pointer.h  pointer_application.h  pointer_array.h  pointer_basic.h  pointer_exercise.h  pointer_func.h  pointer_malloc.h  pointer_string.h  sll.h  vector.h
pointer/src/: main.c  pointer.c  pointer_array.c  pointer_basic.c  pointer_exercise.c  pointer_func.c  pointer_malloc.c  pointer_string.c  sll.c  vector.c
statements_and_arrays/include/: exercise.h  statements_and_arrays.h
statements_and_arrays/src/: exercise.c  main.c  statements_and_array.c
structs_and_enum/include/: enum.h  st_and_em_exercise.h  struct.h  structs_and_enum.h  vector.h
structs_and_enum/src/: enum.c  main.c  st_and_em_exercise.c  struct.c  vector.c
